# neo4j_enterprise_to_community

./: .gitignore  Dockerfile  LICENSE  README.md  convert.sh  docker-compose.yml  pyproject.toml
dumps/: .gitignore  20240821_moriarty_self_constraints_creation.cypher
scripts/: convert.sh  drop_constraints.sh  export_constraints.sh
