[tool.poetry]
name = "neo4j-import"
version = "0.1.0"
description = ""
authors = ["Ratul Minhaz <minhaz.ratul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

